# mth5_tutorial

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test_environment.yml
src/make_mth5/: make_mth5_from_lemi.ipynb  make_mth5_from_phoenix_real.ipynb  make_mth5_from_z3d.ipynb
src/mth5_objects/: channel_ts_example.ipynb  filters_example.ipynb  remove_instrument_response_example.ipynb  run_ts_example.ipynb  transfer_function_example.ipynb
src/notebooks/: make_mth5_from_lemi.ipynb
src/processing/: synthetic_data_processing_aurora.ipynb
