[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mth5_tutorial"
version = "0.1.0"
description = "Tutorial notebooks demonstrating how to use the mth5 package to create MTH5 files from various MT instruments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MTH5 Development Team"},
]
keywords = ["magnetotellurics", "MT", "geophysics", "time series", "HDF5", "tutorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

# Dependencies are specified in requirements.txt for Binder compatibility

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kujaku11/mth5_tutorial"
Documentation = "https://mth5.readthedocs.io"
Repository = "https://github.com/kujaku11/mth5_tutorial"
Issues = "https://github.com/kujaku11/mth5_tutorial/issues"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*.ipynb"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
